fix gap between icons

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
+  gap: 1rem;
   /* bottom: 3rem;
   left: 50%;
   transform: translate(-50%, 0); */
